# EEG-Signal-Classification

./: README.md  test.py  visualization.py
Automatation/: README.md  aggregate_data.py  createPipeline.py  loadData.py  lstm.py  runPipeline.py  signalConditioning.py  train.py  uploadData.py
Automatation/Environment/: Dockerfile  conda_dependencies.yaml  createEnvironment.py  pyproject.toml  test.py
Automatation/Environment/poetryTEst/testproject/: pyproject.toml
Automatation/Pipelines/Pipeline Definitions/: basePipeline.py
Automatation/Pipelines/PipelineSteps/: config.json  loadData.py
Data/: labels.npy  raw_signals.npy  sub-10_ses-8.npy
Datasets/: load.py  load_test.ipynb
Datasets/Ar-EEGDataset/sub-0/ses-0/eeg/: sub-0_ses-0_task-innerspeech_eeg.eeg  sub-0_ses-0_task-innerspeech_eeg.vhdr  sub-0_ses-0_task-innerspeech_eeg.vmrk
Datasets/Ar-EEGDataset/sub-0/ses-1/eeg/: sub-0_ses-1_task-innerspeech_eeg.eeg  sub-0_ses-1_task-innerspeech_eeg.vhdr  sub-0_ses-1_task-innerspeech_eeg.vmrk
Preprocessing/: signalConditioning.py
Preprocessing/Component Methods/: DLSE.py  ICA.py  IVA.py  NMF.py  PCA.py  TD.py  description.md  evaluation.py  test.ipynb
Preprocessing/ComponentMethods/: DLSE.py  DeepICA.py  ICA.py  IVA.py  TD.py  encoders.py  test copy.ipynb  test.ipynb  testFile.py
sprints/sprint1/: reporteHugo.md
sprints/sprint2/: reporteDaniel.md  reporteHugo.md
sprints/sprint3/: reporteDaniel.md  reporteHugo.md
sprints/sprint4/: reporteDaniel.md
sprints/sprint5/: reporteDaniel.md
sprints/sprint6/: reporteDaniel.md
(+539 files in other folders)
