[tool.poetry]
name = "Preprocessing"
version = "0.1.0"
description = "Package for EEG Signal Processing"
authors = [
    "danielolivaresl <daniel.olivares0606@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.10"  # This is where `requires-python` should be specified
numpy = ">=1.23.5,<2.0.0"
setuptools = "72.1.0"
wheel = "0.44.0"
matplotlib = "3.5.0"
psutil = "5.8.0"
tqdm = "4.66.3"
ipykernel = "6.20.2"

tensorboard = "2.16.0"
tensorflow = { version = "2.16.2", extras = ["and-cuda"] }
tensorflow-datasets = "4.9.0"
debugpy = "1.6.3"
cryptography = ">=41.0.4"
idna = ">=3.7"
scikit-learn = "1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"