[project]
name = "testproject"
version = "0.1.0"
description = ""
authors = [
    {name = "danielolivaresl",email = "daniel.olivares0606@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.1"
dependencies = [
]

[tool.poetry]
packages = [{include = "testproject", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
